--- a/src/common.blocks/_socials.scss
+++ b/src/common.blocks/_socials.scss
@@ -18,13 +18,13 @@
 }
 
 .socials__link--first {
-  background: url("../../images/common.blocks/socials/fb.png") no-repeat;
+  background: url("../../images/common.blocks/socials/fb.svg") no-repeat;
 }
 
 .socials__link--second {
-  background: url("../../images/common.blocks/socials/tw.png") no-repeat 0 2px;
+  background: url("../../images/common.blocks/socials/tw.svg") no-repeat 0 2px;
 }
 
 .socials__link--third {
-  background: url("../../images/common.blocks/socials/inst.png") no-repeat;
+  background: url("../../images/common.blocks/socials/inst.svg") no-repeat;
 }
