--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -4,9 +4,9 @@
 @import "../../ancillary.styles/_fonts";
 @import "../../ancillary.styles/_vars";
 @import "../../ancillary.styles/_mixins";
-@import "../../ancillary.styles/_common.styles";
+@import "../../ancillary.styles/_global";
 
-@import '../../common.blocks/btn-to-top/_btn-to-top';
+// @import '../../common.blocks/btn-to-top/_btn-to-top';
 @import "../../common.blocks/services/_services";
 @import "../../common.blocks/header-upper/_header-upper";
 @import "../../common.blocks/_card";
