--- a/src/ancillary.styles/_vars.scss
+++ b/src/ancillary.styles/_vars.scss
@@ -2,8 +2,9 @@ $accent-color: #f27935;
 
 $primary-font-color: #000;
 $secondary-font-color: #fff;
+
 $default-font-size: 16px;
-$main-font-family: 'SF Pro Display';
+$main-fonts: 'SF Pro Display', sans-serif; // add default fonts list
 
 %centering-flex-container {
   display: flex;
