--- a/src/pages/portfolio/portfolio.scss
+++ b/src/pages/portfolio/portfolio.scss
@@ -1,51 +1,45 @@
-@import "../../../ancillary-styles/_vars";
-@import "../../../ancillary-styles/_mixins";
-@import "../../../ancillary-styles/_common.styles";
+@import "reset.css/reset.css";
 
-@import "../../../common-blocks/header-upper/_header-upper";
-@import "../../../common-blocks/_card";
-@import "../../../common-blocks/_socials";
-@import "../../../common-blocks/_footer";
+@import "../../ancillary.styles/_fonts";
+@import "../../ancillary.styles/_vars";
+@import "../../ancillary.styles/_mixins";
+@import "../../ancillary.styles/_global";
+
+@import "../../common.blocks/header-upper/_header-upper";
+@import "../../common.blocks/_card";
+@import "../../common.blocks/_socials";
+@import "../../common.blocks/_footer";
 
 .header {
   .header__lower {
     padding-top: 210px;
     border-bottom: 1px solid rgba(000, 000, 000, 0.3);
-  }
 
-  @media screen and (max-width: 1024px) {
-    .header__lower {
+    @media screen and (max-width: 1024px) {
       padding-top: 100px;
     }
-  }
 
-  @media screen and (max-width: 450px) {
-    .header__lower {
+    @media screen and (max-width: 450px) {
       padding-top: 50px;
     }
   }
 
   .header__title {
-    margin-left: 400px;
     @include font(700, 3.5rem);
+
+    margin-left: 400px;
     line-height: 80%;
     text-transform: capitalize;
-  }
 
-  @media screen and (max-width: 1024px) {
-    .header__title {
+    @media screen and (max-width: 1024px) {
       font-size: 2rem;
     }
-  }
 
-  @media screen and (max-width: 700px) {
-    .header__title {
+    @media screen and (max-width: 700px) {
       margin-left: 80px;
     }
-  }
 
-  @media screen and (max-width: 450px) {
-    .header__title {
+    @media screen and (max-width: 450px) {
       font-size: 1.5rem;
     }
   }
@@ -55,31 +49,23 @@
   .projects__nav {
     padding-top: 70px;
     padding-bottom: 55px;
-  }
 
-  @media screen and (max-width: 1250px) {
-    .projects__nav {
+    @media screen and (max-width: 1250px) {
       padding-left: 40px;
       padding-right: 40px;
     }
-  }
 
-  @media screen and (max-width: 1024px) {
-    .projects__nav {
+    @media screen and (max-width: 1024px) {
       padding-top: 35px;
       padding-bottom: 30px;
     }
-  }
 
-  @media screen and (max-width: 768px) {
-    .projects__nav {
+    @media screen and (max-width: 768px) {
       padding-left: 80px;
       padding-right: 80px;
     }
-  }
 
-  @media screen and (max-width: 600px) {
-    .projects__nav {
+    @media screen and (max-width: 600px) {
       padding-left: 20px;
       padding-right: 20px;
     }
@@ -92,43 +78,35 @@
   .projects__menu-item {
     text-transform: capitalize;
     transition: 0.2s color ease;
-  }
 
-  .projects__menu-item:hover {
-    color: $accent-color;
-    cursor: pointer;
-    transition: 0.2s color ease;
+    &:hover {
+      color: $accent-color;
+      cursor: pointer;
+      transition: 0.2s color ease;
+    }
   }
 
   .projects__menu-item:not(:last-child) {
     margin-right: 45px;
   }
 
-  // ================================= grid
-
   .projects__lower {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: minmax(570px, auto);
     grid-gap: 60px;
-  }
 
-  @media screen and (max-width: 1919px) {
-    .projects__lower {
+    @media screen and (max-width: 1919px) {
       grid-auto-rows: minmax(500px, auto);
       grid-gap: 40px;
     }
-  }
 
-  @media screen and (max-width: 1350px) {
-    .projects__lower {
+    @media screen and (max-width: 1350px) {
       grid-auto-rows: minmax(400px, auto);
       grid-gap: 30px;
     }
-  }
 
-  @media screen and (max-width: 1024px) {
-    .projects__lower {
+    @media screen and (max-width: 1024px) {
       grid-template-columns: repeat(2, 1fr);
       // grid-auto-rows: minmax(400px, auto);
       grid-gap: 40px;
@@ -136,20 +114,16 @@
       padding-left: 40px;
       padding-right: 40px;
     }
-  }
 
-  @media screen and (max-width: 768px) {
-    .projects__lower {
+    @media screen and (max-width: 768px) {
       grid-template-columns: repeat(1, 1fr);
       grid-gap: 40px;
 
       padding-left: 80px;
       padding-right: 80px;
     }
-  }
 
-  @media screen and (max-width: 600px) {
-    .projects__lower {
+    @media screen and (max-width: 600px) {
       // grid-template-columns: repeat(1, 1fr);
       grid-gap: 20px;
 
@@ -159,57 +133,54 @@
     }
   }
 
-  // ================================= grid/
-
   .projects__card {
     background-color: #fff;
-  }
 
-  @media screen and (max-width: 450px) {
-    .projects__card {
+    @media screen and (max-width: 450px) {
       padding-bottom: 100px;
     }
-  }
 
-  @media screen and (max-width: 600px) {
-    .projects__card-title {
-      margin-bottom: 20px;
+    &:hover {
+      background: none;
+      outline: 1px solid black;
     }
   }
 
-  @media screen and (max-width: 450px) {
-    .projects__card-title {
+  .projects__card-title {
+    @media screen and (max-width: 600px) {
+      margin-bottom: 20px;
+    }
+
+    @media screen and (max-width: 450px) {
       font-size: 1.2rem;
     }
   }
 
   .projects__card-category {
     color: $accent-color;
-  }
 
-  @media screen and (max-width: 450px) {
-    .projects__card-category {
+    @media screen and (max-width: 450px) {
       font-size: 0.7rem;
     }
   }
 
   .projects__card--first {
-    background: url("../../../images/pages/portfolio-page/bedroom.jpg") center
-      center no-repeat;
+    background: url("../../images/pages/portfolio/bedroom.jpg") center center
+      no-repeat;
     background-size: cover;
   }
 
   .projects__card--second {
-    background: url("../../../images/pages/portfolio-page/hall.jpg") center
-      center no-repeat;
+    background: url("../../images/pages/portfolio/hall.jpg") center center
+      no-repeat;
     background-size: cover;
   }
 
   .projects__card--third {
     grid-row: 1 / 3;
     grid-column: 3 / 3;
-    background: url("../../../images/pages/portfolio-page/yard.jpg") center
-      center no-repeat;
+    background: url("../../images/pages/portfolio/yard.jpg") center center
+      no-repeat;
     background-size: cover;
   }
 
@@ -223,8 +194,8 @@
   .projects__card--fourth {
     grid-row: 2 / 4;
     grid-column: 1 / 1;
-    background: url("../../../images/pages/portfolio-page/sofa.jpg") center
-      center no-repeat;
+    background: url("../../images/pages/portfolio/sofa.jpg") center center
+      no-repeat;
     background-size: cover;
   }
 
@@ -236,34 +207,34 @@
   }
 
   .projects__card--fifth {
-    background: url("../../../images/pages/portfolio-page/houses.jpg") center
-      center no-repeat;
+    background: url("../../images/pages/portfolio/houses.jpg") center center
+      no-repeat;
     background-size: cover;
   }
 
   .projects__card--sixth {
-    background: url("../../../images/pages/portfolio-page/white-houses.jpg")
-      center center no-repeat;
+    background: url("../../images/pages/portfolio/white-houses.jpg") center
+      center no-repeat;
     background-size: cover;
   }
 
   .projects__card--seventh {
-    background: url("../../../images/pages/portfolio-page/building.jpg") center
-      center no-repeat;
+    background: url("../../images/pages/portfolio/building.jpg") center center
+      no-repeat;
     background-size: cover;
   }
 
   .projects__card--eighth {
-    background: url("../../../images/pages/portfolio-page/hall.jpg") center
-      center no-repeat;
+    background: url("../../images/pages/portfolio/hall.jpg") center center
+      no-repeat;
     background-size: cover;
   }
 
   .projects__card--nineth {
     grid-row: 4 / 4;
     grid-column: 2 / 4;
-    background: url("../../../images/pages/portfolio-page/divan.jpg") center
-      center no-repeat;
+    background: url("../../images/pages/portfolio/divan.jpg") center center
+      no-repeat;
     background-size: cover;
   }
 
@@ -272,11 +243,6 @@
       grid-row: auto;
       grid-column: auto;
     }
-  }
-
-  .card:hover {
-    background: none;
-    outline: 1px solid black;
   }
 
   .projects__card:last-child:hover {
@@ -292,29 +258,23 @@
     display: flex;
     justify-content: center;
     align-items: center;
-  }
 
-  @media screen and (max-width: 1200px) {
-    .projects__card-link {
+    @media screen and (max-width: 1200px) {
       width: 60px;
       height: 60px;
     }
-  }
 
-  @media screen and (max-width: 1350px) {
-    .projects__card-link {
+    @media screen and (max-width: 1350px) {
       bottom: 40px;
     }
-  }
 
-  @media screen and (max-width: 600px) {
-    .projects__card-link {
+    @media screen and (max-width: 600px) {
       bottom: 20px;
     }
-  }
 
-  .projects__card-link::after {
-    content: url("../../../images/pages/portfolio-page/arrow.png");
+    &::after {
+      content: url("../../images/pages/portfolio/arrow.png");
+    }
   }
 }
 
